# CanpGrid

./: .gitignore  LICENSE  README.md  README.zh-CN.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md  calibration_plan.md  example_profile.json
canpgrid/: __init__.py  cli.py  core.py  evaluation.py  geometry.py  grid.py  palette.py  render.py  schemas.py  snap.py
docs/: calibration.md  concept.md  interaction-dataset.md  overlay-modes.md  point-spec.md  preview-point.md  protocol.md  version-report.md
examples/: codex_baseline_report.py  demo.py  interaction_benchmark.py  kimi_ui_compare.py  kimi_wechat_compare.py  kimi_wechat_dom_benchmark.py  snap_agent_benchmark.py  task_action_benchmark.py
examples/sample_images/: README.md
tests/: test_evaluation.py  test_geometry.py  test_grid.py  test_interaction_benchmark.py  test_point_spec.py  test_render.py  test_resolve.py  test_task_action_benchmark.py
tools/: annotation_workbench.html
