[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canpgrid"
version = "0.1.0"
description = "Adaptive Recursive Image Grid for Multimodal Agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "CANPAI contributors" }
]
keywords = [
  "multimodal-agents",
  "image-grid",
  "visual-grounding",
  "gui-agents",
  "computer-use",
  "agent-tools",
  "python",
  "canpai"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Typing :: Typed"
]
dependencies = [
  "pillow>=10.0",
  "typer>=0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[project.scripts]
canpgrid = "canpgrid.cli:app"

[tool.setuptools.packages.find]
include = ["canpgrid*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
